fix: prevent overflow x for blog post

--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -4,6 +4,7 @@
   margin: 0 auto;
   font-size: 1.6rem;
   color: var(--text);
+  overflow-x: hidden;
 
   .listPosts {
     list-style: none;
